# sourmash_plugin_dehash

./: CMakeLists.txt  README.md  pyproject.toml
includes/: hashutil.hpp  kseq.h
lib/kmerDecoder/lib/kseq/: CMakeLists.txt  LICENSE  README.md
lib/kmerDecoder/lib/kseq/.github/workflows/: standalone.yml
lib/kmerDecoder/lib/kseq/standalone/: CMakeLists.txt
lib/kmerDecoder/lib/kseq/standalone/source/: test_include.cpp
lib/kmerDecoder/src/: kmerDecoder.cpp
lib/kmerDecoder/src/hashUtils/: hashutil.cpp
src/: dehasher.cpp  hashutil.cpp
src/dehasher/: __init__.py
