[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.0.0"]
build-backend = "scikit_build_core.build"


[project]
name = "dehasher"
version = "0.2"
description = "Dehash sourmash signatures to ACGT k-mers"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Mohamed Abuelanin", email = "mabuelanin@gmail.com" }]
classifiers = ["License :: BSD"]

dependencies = [
    "sourmash>=4.8.0,<5",
]

[project.urls]
Homepage = "https://github.com/mr-eyes/sourmash_plugin_dehasher"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

# [project.scripts]
# dehasher = "dehasher:cli"

[project.entry-points."sourmash.cli_script"]
dehasher = "dehasher:Command_Dehasher"